--- a/src/app/components/playing-card/playing-card.component.html
+++ b/src/app/components/playing-card/playing-card.component.html
@@ -1,1 +1,7 @@
-<h1>Hello World</h1>
+<div id="cards">
+  <ul>
+    <li *ngFor="let card of cards">
+      {{ card.name }}
+    </li>
+  </ul>
+</div>
