fix: rendu de limage en mode lazy loading

--- a/src/app/components/playing-card/playing-card.component.html
+++ b/src/app/components/playing-card/playing-card.component.html
@@ -16,6 +16,7 @@
                   class="energy icon"
                   width="20"
                   height="20"
+                  lazy
                   priority
                 />
               </div>
@@ -27,6 +28,8 @@
               width="200"
               height="200"
               alt="picLarge"
+              lazy
+              priority
             />
             <figCaption>{{ card.no }} Monsters</figCaption>
           </figure>
@@ -42,6 +45,7 @@
                     width="20"
                     height="20"
                     priority
+                    lazy
                   />
                 </tr>
               </body>
