--- a/src/app/components/playing-card/playing-card.component.html
+++ b/src/app/components/playing-card/playing-card.component.html
@@ -1,128 +1,134 @@
-<div id="cards">
-  <ul>
-    <li *ngFor="let card of cards">
-      <div id="card">
-        <div id="inside">
-          <header>
-            <div class="left">
-              <div id="name">{{ card.pokemon.name }}</div>
-            </div>
-            <div class="right">
-              <div id="hp">{{ card.stats.hp }} HP</div>
-              <div>
-                <img
-                  ngSrc="assets/images/types/{{ card.stats.type1 }}.png"
-                  alt="type"
-                  class="energy icon"
-                  width="20"
-                  height="20"
-                  lazy
-                  priority
-                />
-              </div>
-            </div>
-          </header>
-          <figure id="art">
-            <div>{{ card.pokemon.picLarge }}</div>
-            <div *ngIf="card.pokemon.picLarge == 'null'">
-              show if photo is empty
-            </div>
-            <img
-              ngSrc="{{ card.pokemon.picLarge }}"
-              width="175"
-              height="175"
-              alt="picLarge"
-              lazy
-              priority
-            />
-            <figCaption>{{ card.pokemon.no }} Monsters</figCaption>
-          </figure>
-          <div id="cardImage">
-            <img
-              ngSrc="assets/images/cards/{{ card.pokemon.name }}.png"
-              alt="cardImage"
-              class="cardImg"
-              width="170"
-              height="230"
-              priority
-              lazy
-            />
-          </div>
-          <div id="types">
-            <img
-              ngSrc="assets/images/types/{{ card.stats.type1 }}.png"
-              alt="type1"
-              class="energy icon"
-              width="20"
-              height="20"
-              priority
-              lazy
-            />
-            <img
-              *ngIf="card.stats.type2 != 'NA'"
-              ngSrc="assets/images/types/{{ card.stats.type2 }}.png"
-              alt="type2"
-              class="energy icon"
-              width="20"
-              height="20"
-              priority
-              lazy
-            />
-          </div>
-          <div id="descriptionViolet">
-            <div>
-              <img
-                ngSrc="assets/images/pokeballs/red.png"
-                alt="violet"
-                class="energy icon"
-                width="20"
-                height="20"
-                lazy
-                priority
-              />
-              <p>{{ card.pokemon.descriptionViolet }}</p>
-            </div>
-          </div>
-          <div id="descriptionScarlet">
-            <div>
-              <img
-                ngSrc="assets/images/pokeballs/violet.png"
-                alt="violet"
-                class="energy icon"
-                width="20"
-                height="20"
-                lazy
-                priority
-              />
-              <p>{{ card.pokemon.descriptionScarlet }}</p>
-            </div>
-          </div>
-          <div id="stats">
-            <table>
-              <tr>
-                <th>Name</th>
-                <th>Value</th>
-              </tr>
-              <tr *ngFor="let stat of card.stats | keyvalue">
-                <td>{{ stat.key }}</td>
-                <td>{{ stat.value }}</td>
-              </tr>
-            </table>
-          </div>
-
-          <div id="moves">
-            <table *ngFor="let move of card.moves">
-              <tr>
-                <th *ngFor="let header of move | keyvalue">{{ header.key }}</th>
-              </tr>
-
-              <tr *ngFor="let intoMove of move | keyvalue">
-                <td>{{ intoMove.value }}</td>
-              </tr>
-            </table>
-          </div>
+<div id="card">
+  <div id="inside">
+    <header>
+      <div class="left">
+        <!-- <div id="name">{{ card.pokemon.name }}</div> -->
+        <div id="name">My Monster</div>
+      </div>
+      <div class="right">
+        <!-- <div id="hp">{{ card.stats.hp }} HP</div> -->
+        <div id="hp">150 HP</div>
+        <div>
+          <!-- <img
+            ngSrc="assets/images/types/{{ card.stats.type1 }}.png"
+            alt="type"
+            class="energy icon"
+            width="20"
+            height="20"
+            lazy
+            priority
+          />
+        </div> -->
+          <img
+            ngSrc="assets/images/types/energy.png"
+            alt="type"
+            class="energy icon"
+            width="20"
+            height="20"
+            lazy
+            priority
+          />
         </div>
       </div>
-    </li>
-  </ul>
+    </header>
+    <figure id="art">
+      <!-- <img
+        ngSrc="{{ card.pokemon.picLarge }}"
+        width="175"
+        height="175"
+        alt="picLarge"
+        lazy
+        priority
+      /> -->
+      <img
+        ngSrc="https://www.serebii.net/pokemon/art/915.png"
+        width="175"
+        height="175"
+        alt="picLarge"
+        lazy
+        priority
+      />
+      <!-- <figCaption>{{ card.pokemon.no }} Monsters</figCaption> -->
+      <figCaption>#0915 Monsters</figCaption>
+    </figure>
+
+    <div id="types">
+      <!-- <img
+      ngSrc="assets/images/types/{{ card.stats.type1 }}.png"
+      alt="type1"
+      class="energy icon"
+      width="20"
+      height="20"
+      priority
+      lazy
+    /> 
+      <img
+        *ngIf="card.stats.type2 != 'NA'"
+        ngSrc="assets/images/types/{{ card.stats.type2 }}.png"
+        alt="type2"
+        class="energy icon"
+        width="20"
+        height="20"
+        priority
+        lazy
+      />
+     -->
+      <img
+        ngSrc="assets/images/types/energy.png"
+        alt="type1"
+        class="energy icon"
+        width="20"
+        height="20"
+        priority
+        lazy
+      />
+      <img
+        ngSrc="assets/images/types/energy.png"
+        alt="type2"
+        class="energy icon"
+        width="20"
+        height="20"
+        priority
+        lazy
+      />
+    </div>
+    <div id="descriptionViolet">
+      <div>
+        <img
+          ngSrc="assets/images/pokeballs/red.png"
+          alt="violet"
+          class="energy icon"
+          width="20"
+          height="20"
+          lazy
+          priority
+        />
+        <!-- <p>{{ card.pokemon.descriptionViolet }}</p> -->
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+          rutrum in urna non efficitur. Duis faucibus, sapien eget laoreet
+          commodo, sem leo rhoncus lacus, at.
+        </p>
+      </div>
+    </div>
+    <div id="descriptionScarlet">
+      <div>
+        <img
+          ngSrc="assets/images/pokeballs/violet.png"
+          alt="violet"
+          class="energy icon"
+          width="20"
+          height="20"
+          lazy
+          priority
+        />
+        <!-- <p>{{ card.pokemon.descriptionScarlet }}</p> -->
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut bibendum
+          diam eget luctus dignissim. Vestibulum pharetra massa a sapien euismod
+          dictum. Fusce fermentum, elit nec.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
