--- a/src/app/components/stats-table/stats-table.component.html
+++ b/src/app/components/stats-table/stats-table.component.html
@@ -5,12 +5,19 @@
 >
   <tr>
     <ng-container matColumnDef="statName">
-      <th mat-header-cell *matHeaderCellDef>Stat Name</th>
-      <td mat-header-cell *matCellDef="let stat">{{ stat.key }}</td>
+      <th mat-header-cell *matHeaderCellDef>Stat</th>
+      <td mat-cell *matCellDef="let stat">{{ stat.key }}</td>
     </ng-container>
     <ng-container matColumnDef="value">
       <th mat-header-cell *matHeaderCellDef>Value</th>
-      <td mat-cell *matCellDef="let stat">{{ stat.value }}</td>
+      <td mat-cell *matCellDef="let stat">
+        <div *ngIf="isNumber(stat.value)">
+            <mat-progress-bar mode="determinate" [value]="stat.value"></mat-progress-bar>   
+        </div>
+        <div *ngIf="isString(stat.value)">
+            {{ stat.value }}
+        </div>
+      </td>
     </ng-container>
   </tr>
 
